Fixed Fbook alignment and reloading

--- a/css/style.css
+++ b/css/style.css
@@ -59,12 +59,19 @@ h3 {
 
 .social >li {
   margin:5px;
-  display:inline;
+  display:inline-block;
 }
 
-.social >li >iframe{
+.twitter >iframe{
   vertical-align:middle;
+  height:23px !important;
 }
+
+.fb-share-button >span {
+  vertical-align: middle !important;
+  height:24px !important;
+}
+
 
 
 
